--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,23 @@ Binaries/
 *.log
 Makefile
 
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+[Bb]in/
+[Bb]in-Int/
+x64/
+x86/
+[Ww][Ii][Nn]32/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+
 # Exclude
 !Vendor/Binaries
